# MediaFormatter

./: Makefile  README.md  extract.py  main.py  merge.py  multi_langs_merge.py  preprocess.py  pyproject.toml  rename.py  schedule.py  srt2ass.py  style.py
config/: encodings.json  field_order.json  ref.ass  template.ass
config/styles/: CHINESE.json  Default.json  ENGLISH.json  event.json
mediaformatter/: __init__.py  assemble.py  extract.py  fonts.py  merge.py  preprocess.py  rename.py  srt2ass.py  style.py  utils.py
