[tool.poetry]
name = "mediaformatter"
version = "1.0.0"
description = "MediaFormatter: Effortless Video and Subtitle Handling at Your Fingertips"
authors = ["Feifan Fan <frankfanff53@gmail.com>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.9, <4.0"
ass = "^0.5.4"
typer = "^0.9.0"
numpy = "^1.26.3"
matplotlib = "^3.8.2"
tqdm = "^4.66.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
